# calamine

./: .gitignore  .travis.yml  .typos.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md  STYLE_FEATURE.md  appveyor.yml  conditional_formatting.xlsx  test_color_fix.rs  test_indexed_colors.rs
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: rust.yml  typos.yml
benches/: basic.rs  conditional_formatting.rs  generate_large_styled_xlsx.rs  generate_styles_1M.rs  style.rs
examples/: README.md  conditional_formatting.rs  deserialize_fallible.rs  deserialize_flatten.rs  deserialize_no_headers.rs  deserialize_range.rs  deserialize_seed.rs  deserialize_struct.rs  doc_range_cells.rs  doc_range_deserialize.rs  doc_range_empty.rs  doc_range_end.rs  doc_range_from_sparse.rs  doc_range_get.rs  doc_range_get_value.rs  doc_range_headers.rs  doc_range_height.rs  doc_range_index_cell.rs  doc_range_index_mut_cell.rs  doc_range_index_row.rs  doc_range_new.rs  doc_range_range.rs  doc_range_rows.rs  doc_range_set_value.rs  doc_range_size.rs  doc_range_start.rs  doc_range_used_cells.rs  doc_range_width.rs  excel_to_csv.rs  layout.rs  layout_example.rs  read_cell_styles.rs  read_charts.rs  read_hyperlinks.rs  read_picture_data.rs  read_row_and_column_dimensions.rs  search_errors.rs  simple_read.rs  style.rs  style_example.rs  (+2 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_all.rs
src/: attrs.rs  auto.rs  cfb.rs  changelog.rs  chart.rs  conditional_format.rs  conditional_formatting.rs  datatype.rs  de.rs  error.rs  errors.rs  formats.rs  index_set.rs  lib.rs  ods.rs  pivot.rs  style.rs  utils.rs  vba.rs  xls.rs  xlsb.rs  xlsx.rs  xlsx_iter.rs
src/xlsb/: cells_reader.rs  mod.rs
src/xlsx/: cells_reader.rs  chart_parser.rs  mod.rs  style_parser.rs
tests/: EMSI_JobChange_UK.xlsx  OOM_alloc.xls  OOM_alloc2.xls  OOM_alloc3.xls  any_sheets.xls  biff5-rich-text-string.xls  biff5_write.xls  capitalized_wbook_stream.xls  charts.xlsx  choose.xlsb  col-projection.xlsx  column_row_ranges.xlsx  conditional_formatting.xlsx  covered.ods  date.ods  date.xls  date.xlsb  date.xlsx  date_1904.xls  date_1904.xlsb  date_1904.xlsx  date_iso.xlsx  date_quoted_format.xlsx  empty-string.xls  empty_s_attribute.xlsx  empty_shared_string.xlsx  empty_shared_string_v.xlsx  empty_sheet.xlsx  encoded_entities.xlsx  errors.xlsx  escape_quote.xlsb  excel_date_notation.xlsx  format.xlsx  formula-date-format.xls  formula.issue.xlsx  gh548_incorrect_sst_unique_count.xls  has_x000D_.xlsx  has_x000D_inline.xlsx  header-row.xlsx  high_byte_string.xls  (+109 more)
