[package]
name = "calamine"
version = "0.20.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
repository = "https://github.com/tafia/calamine"
documentation = "https://docs.rs/calamine"
description = "An Excel/OpenDocument Spreadsheets reader and deserializer in pure rust"
license = "MIT"
readme = "README.md"
keywords = ["excel", "ods", "xls", "xlsx", "xlsb"]
categories = ["encoding", "parsing", "text-processing"]
exclude = ["tests/**/*"]
edition = "2018"
rust-version = "1.59"

[dependencies]
byteorder = "1.4"
codepage = "0.1.1"
encoding_rs = "0.8"
log = "0.4"
once_cell = { version = "1.17", optional = true }
serde = "1.0"
quick-xml = { version = "0.28", features = ["encoding"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = [
    "serde",
], optional = true, default-features = false }

[dev-dependencies]
glob = "0.3"
env_logger = "0.9"
serde_derive = "1.0"
sha256 = "1.1"

[features]
default = []
dates = ["chrono", "once_cell"]
picture = []
