[package]
name = "calamine"
version = "0.26.1"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
repository = "https://github.com/tafia/calamine"
documentation = "https://docs.rs/calamine"
description = "An Excel/OpenDocument Spreadsheets reader and deserializer in pure rust"
license = "MIT"
readme = "README.md"
keywords = ["excel", "ods", "xls", "xlsx", "xlsb"]
categories = ["encoding", "parsing", "text-processing"]
exclude = ["tests/**/*"]
edition = "2021"
rust-version = "1.73"

[dependencies]
byteorder = "1.5"
codepage = "0.1.1"
encoding_rs = "0.8"
log = "0.4"
serde = "1.0"
quick-xml = { version = "0.31", features = ["encoding"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = [
    "serde",
], optional = true, default-features = false }

[dev-dependencies]
glob = "0.3"
env_logger = "0.11"
rstest = { version = "0.21.0", default-features = false }
serde_derive = "1.0"
sha2 = "0.10.8"

[features]
default = []
dates = ["chrono"]
picture = []

[package.metadata.docs.rs]
features = ["dates", "picture"]
