[package]
name = "calamine"
version = "0.30.1"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
repository = "https://github.com/tafia/calamine"
documentation = "https://docs.rs/calamine"
description = "An Excel/OpenDocument Spreadsheet reader and deserializer in pure Rust"
license = "MIT"
readme = "README.md"
keywords = ["excel", "ods", "xls", "xlsx", "xlsb"]
categories = ["encoding", "parsing", "text-processing"]
exclude = ["tests/**/*"]
edition = "2021"
rust-version = "1.83" # For quick-xml + encoding_rs.

[dependencies]
log = "0.4"
serde = "1.0"
codepage = "0.1.1"
atoi_simd = "0.16"
byteorder = "1.5"
encoding_rs = "0.8"
fast-float2 = "0.2"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"], optional = true, default-features = false }
quick-xml = { version = "0.38", features = ["encoding"] }

[dev-dependencies]
glob = "0.3"
sha2 = "0.10.8"
env_logger = "0.11"
serde_derive = "1.0"
rstest = { version = "0.21.0", default-features = false }

[features]
default = []
dates = ["chrono"]
picture = []

[package.metadata.docs.rs]
features = ["dates", "picture"]
